addons/openerp/static/css/style.css
/* ... */
td.db_login_buttons {
    text-align: right;
    padding-right: 10px;
}

/* POPUPS */

.footer_tool_box {
    padding: 0 5px;
}

td.save_close {
    padding: 0 5px 0 0;
}

/* VIEWED */
div.viewed_tree {
    overflow-x: auto;
    overflow-y: scroll;
    width: 100%;
    height: 100%;
    border: solid #999999 1px;
}

/* Binary Widget */
div.binary_buttons {
    white-space: nowrap;
    width: 150px;
}

/* Button Widget */
div.button_wid_string {
    text-align: center;
    background-repeat: no-repeat;
    padding: 3px 0 0 20px;
    height: 17px;
}

/* Progress Bar Widget */
#progress {
    position: relative;
    border: 1px solid gray;
    font-size: 11px;
    text-align: center;
}
#progress div {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    background: #afafaf;
    z-index: -1;
}

td.logActions {
    padding: 0 0 1px 10px;
}

div#more_logs {
	display: none;
}

div#serverlog {
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    background: #FFFFFF none repeat scroll 0 0;
    border: 1px solid #CECBCB;
}

table.serverLogHeader {
    border-bottom: 1px solid #CECBCB;
    padding: 2px;
    color: #9A0404;
    width: 100%;
}

div#serverlog a {
    color: #511712;
}

.pager-cell-button {
    padding: 0 0 0 5px;
}

.custom-filter {
    float: right;
    padding: 0;
}

.inactive_clear {
    display: none;
}

div.filter-a button.filter_with_icon {
	-moz-border-radius: 0;
    -webkit-border-radius: 0;
	border-radius: 0;
}

div.filter-a button.filter_with_icon {
    border-width: 1px 1px 1px 0;
    border-style: solid;
    border-color: #cccbcb;
    background: #F4F2F2;
    font-size: 1em !important;
    font-weight: bold;
    text-transform: uppercase;
    text-shadow: #fff 0 1px 0;
    color: #1F1F1F;
    line-height: 1.25;
    white-space: nowrap;
    padding: 0;
    min-height: 45px;
    min-width: 45px;
}

td.grop_box_active div.filter-a button.active {
    background-color: #cbced2;
    color: #000000;
}

div.filter-a button.filter_with_icon:active {
    background-color: #cbced2;
    color: #000000;
}

div.filter-a button.filter_with_icon:focus,
div.filter-a button.filter_with_icon:hover {
	background-color: #e2e2e2;
	color: #000000;
}

div.filter-a button.filter_icon {
    background: none;
    border: none;
    margin: 15px 0 0 0;
    min-height: 25px;
    max-height: 30px;
    max-width: 30px;
}

div.filter-a button.filter_icon:active {
    background-color: #cbced2;
    border-color: #cccbcb;
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
}
div.filter-a button.filter_icon:hover,
div.filter-a button.filter_icon:focus {
	background-color: #e2e2e2;
}

.filters-group .group_box:first-child button {
    border-left: 1px solid #cccbcb;
    -webkit-border-top-left-radius: 7px;
    -webkit-border-bottom-left-radius: 7px;
    -moz-border-radius-topleft: 7px;
    -moz-border-radius-bottomleft: 7px;
    border-top-left-radius: 7px;
    border-bottom-left-radius: 7px;
}

.filters-group .group_box:last-child button {
    -webkit-border-top-right-radius: 7px;
    -webkit-border-bottom-right-radius: 7px;
    -moz-border-radius-topright: 7px;
    -moz-border-radius-bottomright: 7px;
    border-top-right-radius: 7px;
    border-bottom-right-radius: 7px;
}

div.filter-a button table {
    margin: 10px;
    text-align: center;
}

td.exp-header,
td.imp-header,
td.save-filter-header {
	padding:0 0 0 10px;
}

td.exp-header a,
td.imp-header a,
td.save-filter-header a{
	margin: 2px;
}

/**
 * vim: sts=4 st=4 et
 *
 */

